@@ -17,15 +17,13 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-/**
- * Implementação do serviço de Unidades Penais
- */
 @Service
 @RequiredArgsConstructor
 @Slf4j
 public class UnidadePenalServiceImpl implements UnidadePenalService {
+
+    private static final String MSG_UNIDADE_PENAL_NAO_ENCONTRADA = "Unidade penal não encontrada com ID: ";
 
     private final UnidadePenalRepository unidadePenalRepository;
     private final CustodiadoRepository custodiadoRepository;
@@ -34,20 +32,20 @@ public class UnidadePenalServiceImpl implements UnidadePenalService {
     @Transactional
     public UnidadePenalResponseDTO criarUnidadePenal(UnidadePenalRequestDTO requestDTO) {
         log.info("Criando nova unidade penal: {}", requestDTO.getNome());
-        
+
         // Verificar se já existe unidade penal com este nome
         if (unidadePenalRepository.findByNome(requestDTO.getNome()).isPresent()) {
             log.warn("Tentativa de criar unidade penal com nome duplicado: {}", requestDTO.getNome());
             throw new OperacaoInvalidaException("Já existe uma unidade penal com o nome: " + requestDTO.getNome());
         }
-        
+
         UnidadePenal unidadePenal = new UnidadePenal();
         unidadePenal.setNome(requestDTO.getNome());
         unidadePenal.setDescricao(requestDTO.getDescricao());
-        
+
         unidadePenal = unidadePenalRepository.save(unidadePenal);
         log.info("Unidade penal criada com sucesso. ID: {}", unidadePenal.getId());
-        
+
         return new UnidadePenalResponseDTO(unidadePenal);
     }
 
@@ -55,25 +53,26 @@ public class UnidadePenalServiceImpl implements UnidadePenalService {
     @Transactional
     public UnidadePenalResponseDTO atualizarUnidadePenal(Long id, UnidadePenalRequestDTO requestDTO) {
         log.info("Atualizando unidade penal com ID: {}", id);
-        
+
         UnidadePenal unidadePenal = unidadePenalRepository.findById(id)
-                .orElseThrow(() -> new RecursoNaoEncontradoException("Unidade penal não encontrada com ID: " + id));
-        
+                .orElseThrow(() -> new RecursoNaoEncontradoException(MSG_UNIDADE_PENAL_NAO_ENCONTRADA + id));
+
         // Verificar se já existe outra unidade penal com este nome
         unidadePenalRepository.findByNome(requestDTO.getNome())
                 .ifPresent(u -> {
                     if (!u.getId().equals(id)) {
                         log.warn("Tentativa de atualizar unidade penal com nome duplicado: {}", requestDTO.getNome());
-                        throw new OperacaoInvalidaException("Já existe outra unidade penal com o nome: " + requestDTO.getNome());
+                        throw new OperacaoInvalidaException(
+                                "Já existe outra unidade penal com o nome: " + requestDTO.getNome());
                     }
                 });
-        
+
         unidadePenal.setNome(requestDTO.getNome());
         unidadePenal.setDescricao(requestDTO.getDescricao());
-        
+
         unidadePenal = unidadePenalRepository.save(unidadePenal);
         log.info("Unidade penal atualizada com sucesso. ID: {}", unidadePenal.getId());
-        
+
         return new UnidadePenalResponseDTO(unidadePenal);
     }
 
@@ -82,7 +81,7 @@ public class UnidadePenalServiceImpl implements UnidadePenalService {
     public PageResponseDTO<UnidadePenalResponseDTO> listarUnidadesPenaisPaginadas(Pageable pageable) {
         log.info("Listando unidades penais com paginação");
         Page<UnidadePenal> pagina = unidadePenalRepository.findAll(pageable);
-        
+
         Page<UnidadePenalResponseDTO> paginaDTO = pagina.map(UnidadePenalResponseDTO::new);
         return new PageResponseDTO<>(paginaDTO);
     }
@@ -92,10 +91,11 @@ public class UnidadePenalServiceImpl implements UnidadePenalService {
     public List<UnidadePenalResponseDTO> listarUnidadesPenais() {
         log.info("Listando todas as unidades penais");
         List<UnidadePenal> unidadesPenais = unidadePenalRepository.findAllOrderByNome();
-        
+
+        // Substituindo Collectors.toUnmodifiableList() por .toList()
         return unidadesPenais.stream()
                 .map(UnidadePenalResponseDTO::new)
-                .collect(Collectors.toList());
+                .toList();  // .toList() retorna uma lista imutável em Java 16+
     }
 
     @Override
@@ -103,8 +103,8 @@ public class UnidadePenalServiceImpl implements UnidadePenalService {
     public UnidadePenalResponseDTO buscarUnidadePenalPorId(Long id) {
         log.info("Buscando unidade penal por ID: {}", id);
         UnidadePenal unidadePenal = unidadePenalRepository.findById(id)
-                .orElseThrow(() -> new RecursoNaoEncontradoException("Unidade penal não encontrada com ID: " + id));
-        
+                .orElseThrow(() -> new RecursoNaoEncontradoException(MSG_UNIDADE_PENAL_NAO_ENCONTRADA + id));
+
         return new UnidadePenalResponseDTO(unidadePenal);
     }
 
@@ -113,52 +113,48 @@ public class UnidadePenalServiceImpl implements UnidadePenalService {
     public PageResponseDTO<UnidadePenalResponseDTO> buscarPorNome(String nome, Pageable pageable) {
         log.info("Buscando unidades penais por nome contendo: {}", nome);
         Page<UnidadePenal> pagina = unidadePenalRepository.findByNomeContainingIgnoreCase(nome, pageable);
-        
+
         Page<UnidadePenalResponseDTO> paginaDTO = pagina.map(UnidadePenalResponseDTO::new);
         return new PageResponseDTO<>(paginaDTO);
     }
-    
+
     /**
      * Exclui uma unidade penal.
      * Não incluído na interface original, mas adicionado para completude CRUD.
-     * 
+     *
      * @param id ID da unidade penal a ser excluída
      */
     @Transactional
     public void excluirUnidadePenal(Long id) {
         log.info("Excluindo unidade penal com ID: {}", id);
-        
+
         UnidadePenal unidadePenal = unidadePenalRepository.findById(id)
-                .orElseThrow(() -> new RecursoNaoEncontradoException("Unidade penal não encontrada com ID: " + id));
-        
+                .orElseThrow(() -> new RecursoNaoEncontradoException(MSG_UNIDADE_PENAL_NAO_ENCONTRADA + id));
+
         // Verificar se existem custodiados associados a esta unidade penal
         long custodiadoCount = custodiadoRepository.countByUnidadePenalId(id);
         if (custodiadoCount > 0) {
-            log.warn("Tentativa de excluir unidade penal com custodiados associados. ID: {}, Custodiados: {}", 
+            log.warn("Tentativa de excluir unidade penal com custodiados associados. ID: {}, Custodiados: {}",
                     id, custodiadoCount);
             throw new OperacaoInvalidaException(
-                    "Não é possível excluir esta unidade penal pois existem " + custodiadoCount + 
-                    " custodiados associados a ela. Transfira os custodiados para outra unidade antes de excluí-la.");
+                    "Não é possível excluir esta unidade penal pois existem " + custodiadoCount
+                    + " custodiados associados a ela. Transfira os custodiados para outra unidade antes de excluí-la.");
         }
-        
+
         unidadePenalRepository.delete(unidadePenal);
         log.info("Unidade penal excluída com sucesso. ID: {}", id);
     }
-    
+
     /**
      * Conta o número de custodiados por unidade penal.
      * Método adicional útil para dashboard ou relatórios.
-     * 
+     *
      * @return Lista de contagens de custodiados por unidade penal
      */
     @Transactional(readOnly = true)
     public List<Object[]> contarCustodiadosPorUnidadePenal() {
         log.info("Contando custodiados por unidade penal");
-        
-        // Esta consulta agregaria os dados. Na implementação real, teria que ser definida no repositório
-        // Aqui é apenas um exemplo conceitual do que o método faria
-        List<Object[]> contagens = custodiadoRepository.countByUnidadePenal();
-        
-        return contagens;
+        // Retorno imediato em vez de variável temporária
+        return custodiadoRepository.countByUnidadePenal();
     }
 }
